# 20180702jointMrapi

./: .gitignore  .gitmodules  07jointMrapi.pro  MRJDebugger.pro  README.MD  interfaglobal.h  jointMrapi.pro  widget.cpp  widget.h  widget.ui
include/: joint.h  mrapi.h
interface/: interface.pri  interface.pro
interface/Bottom/: bottom.cpp  bottom.ui
interface/OscilloScope/: oscilloscope.cpp  oscilloscope.h  oscilloscopethread.h
interface/OscilloScope/Component/: paintarea.cpp
interface/SetAndHealth/: setandhealth.ui
interface/include/: bottom.h  move.h  oscilloscope.h  oscilloscopethread.h  pid.h  setandhealth.h
interface/qwt/LinuxLib/: libqwt.so.6.1.3
interface/src/: bottom.cpp  bottom.h  bottom.ui  move.cpp  move.h  move.ui  oscilloscope.cpp  oscilloscope.h  oscilloscope.ui  oscilloscopethread.cpp  oscilloscopethread.h  paintarea.cpp  pid.cpp  pid.ui  setandhealth.cpp  setandhealth.ui  showqueue.cpp  showqueue.h  widget.h  widget.ui
interface/ui/: bottom.ui  move.ui  oscilloscope.ui
joint/: joint.pri  joint.pro
joint/PCANBasic/Include/: PCANBasic.h
joint/include/: logger.h
joint/pcan_basic/: pcan_basic.c
joint/src/: can_driver.h  gripper.c  gripper.h  joint.c  joint.h  logger.c  logger.h  module.c  mrapi.h  pcan_basic.c
mr-api/: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake  mr-api.pri  mr-api.pro
mr-api/drivers/can_stm32/: CAN_Mem.c  CAN_Mem.h  can_stm32.c  can_stm32.h
mr-api/drivers/ethernet/: ecan_basic.c  ecan_basic.h
mr-api/drivers/pcan_basic/: pcan_basic.h  thread_linux.c  thread_win.c
mr-api/examples/SimpleDynamics/: SimpleDynamics.pro  dyanamicsthread.cpp  dyanamicsthread.h  widget.cpp  widget.h  widget.ui
mr-api/examples/frictiontest/: frictiontest.cpp  frictiontest.h  frictiontest.pro  frictiontest.ui  jointstate.cpp  jointstate.h  main.cpp
mr-api/examples/test1/: CMakeLists.txt  MC_PositionProfile.c  position_profile_test.c
mr-api/examples/test1/cmake/: Findmrapi.cmake
mr-api/examples/test2/: CMakeLists.txt  MC_PositionProfile.c  MC_PositionProfile.h  position_profile_test.c
mr-api/include/: can_driver.h  joint.h  master.h  module.h  mrapi.h
mr-api/lib/mrapi/Win32/: mrapi.lib  mrapid.lib
mr-api/lib/mrapi/x64/: mrapi.lib  mrapid.lib
mr-api/mrapi_vs/: PCAN_USBBUS1_1.trc  mrapi.def  mrapi.sln  mrapi.vcxproj  mrapi.vcxproj.filters  mrapid.def  test1.vcxproj  test1.vcxproj.filters  test2.vcxproj  test2.vcxproj.filters
mr-api/protocol/: MRJ Communication Protocol.md
mr-api/src/: joint.c  master.c  module.c
pcan_basic/: pcan_basic.h  thread_linux.c  thread_win.c
src/: joint.c  logger.c  master.c  module.c
