CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(test1 LANGUAGES C)
SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
FIND_PACKAGE(mrapi REQUIRED)
INCLUDE_DIRECTORIES(${libmrapi_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${${LIB_NAME}_SOURCE_DIR}/include)

ADD_EXECUTABLE(test1 position_profile_test.c MC_PositionProfile)
TARGET_LINK_LIBRARIES(test1 ${libmrapi_LIBS} "${libmrapi_LDFLAGS}")
